--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/router": "^15.2.0",
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
+    "marked": "^4.0.17",
+    "ngx-markdown": "^15.1.2",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
