--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
+    "flowbite": "^2.3.0",
     "marked": "^4.0.17",
     "ngx-markdown": "^15.1.2",
     "prismjs": "^1.29.0",
@@ -34,7 +35,6 @@
     "@tailwindcss/typography": "^0.5.12",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.9.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
