--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@tailwindcss/typography": "^0.5.12",
     "@types/jasmine": "~4.3.0",
+    "@types/prismjs": "^1.26.3",
     "autoprefixer": "^10.4.19",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
