--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ngrx/store": "^15.4.0",
+    "@ngrx/effects": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
     "flowbite": "^2.3.0",
     "marked": "^4.0.17",
